Fixed Create Recipe; Created UserBlogPosts in Profile

--- a/SiGotvime (Admin)/SiGotvime (Admin).csproj
+++ b/SiGotvime (Admin)/SiGotvime (Admin).csproj
@@ -362,11 +362,13 @@
     <Content Include="Content\images\cropped_0_39прженитиквички.jpg" />
     <Content Include="Content\images\cropped_0_89салатаодтуна.jpg" />
     <Content Include="Content\images\cropped_0_tzatziki.jpg" />
+    <Content Include="Content\images\cropped_0_Генералскавешалица.jpg" />
     <Content Include="Content\images\cropped_1_tzatziki.jpg" />
     <Content Include="Content\images\full_0_25тортелинипримавера.jpg" />
     <Content Include="Content\images\full_0_39прженитиквички.jpg" />
     <Content Include="Content\images\full_0_89салатаодтуна.jpg" />
     <Content Include="Content\images\full_0_tzatziki.jpg" />
+    <Content Include="Content\images\full_0_Генералскавешалица.jpg" />
     <Content Include="Content\images\full_1_tzatziki.jpg" />
     <Content Include="Content\images\goodIcon.jpg" />
     <Content Include="Content\images\images2%28cropped%29.jpg" />
