--- a/SiGotvime (Web)/SiGotvime (Web).csproj
+++ b/SiGotvime (Web)/SiGotvime (Web).csproj
@@ -236,273 +236,6 @@
     <Content Include="Content\Icons\malta.png" />
     <Content Include="Content\Icons\macedonia.png" />
     <Content Include="Content\Icons\toasted.png" />
-    <Content Include="Content\images\100шпагетиболоњезе%28cropped%29.jpg" />
-    <Content Include="Content\images\100шпагетиболоњезе.jpg" />
-    <Content Include="Content\images\101Осличсобеловиноилуквофурна%28cropped%29.jpg" />
-    <Content Include="Content\images\101Осличсобеловиноилуквофурна.jpg" />
-    <Content Include="Content\images\10928793_432987473525052_1759541116_n.jpg" />
-    <Content Include="Content\images\172Манастирскомакало%28cropped%29.jpg" />
-    <Content Include="Content\images\172Манастирскомакало.jpg" />
-    <Content Include="Content\images\173Галичкитриаголник%28cropped%29.jpg" />
-    <Content Include="Content\images\173Галичкитриаголник.jpg" />
-    <Content Include="Content\images\174Омлетсовргањ%28cropped%29.jpg" />
-    <Content Include="Content\images\174Омлетсовргањ.jpg" />
-    <Content Include="Content\images\175Сосодпечурки%28cropped%29.jpg" />
-    <Content Include="Content\images\175Сосодпечурки.jpg" />
-    <Content Include="Content\images\176Чорбаодкомпири%28cropped%29.jpg" />
-    <Content Include="Content\images\176Чорбаодкомпири.jpg" />
-    <Content Include="Content\images\177Чорбаодкоприви%28cropped%29.jpg" />
-    <Content Include="Content\images\177Чорбаодкоприви.jpg" />
-    <Content Include="Content\images\178Чорбаодјагнешкаглава%28cropped%29.jpg" />
-    <Content Include="Content\images\178Чорбаодјагнешкаглава.jpg" />
-    <Content Include="Content\images\179Чкембечорба%28cropped%29.jpg" />
-    <Content Include="Content\images\179Чкембечорба.jpg" />
-    <Content Include="Content\images\181Чорбаодќофтиња%28cropped%29.jpg" />
-    <Content Include="Content\images\181Чорбаодќофтиња.jpg" />
-    <Content Include="Content\images\198Срцасосирење%28cropped%29.jpg" />
-    <Content Include="Content\images\198Срцасосирење.jpg" />
-    <Content Include="Content\images\199ПогачаПладне%28cropped%29.jpg" />
-    <Content Include="Content\images\199ПогачаПладне.jpg" />
-    <Content Include="Content\images\200Бакрдан%28cropped%29.jpg" />
-    <Content Include="Content\images\200Бакрдан.jpg" />
-    <Content Include="Content\images\21поснитопчиња%28cropped%29.jpg" />
-    <Content Include="Content\images\21поснитопчиња.jpg" />
-    <Content Include="Content\images\23питасовишни%28cropped%29.jpg" />
-    <Content Include="Content\images\23питасовишни.jpg" />
-    <Content Include="Content\images\24посниколачисопивоиореви%28cropped%29.jpg" />
-    <Content Include="Content\images\24посниколачисопивоиореви.jpg" />
-    <Content Include="Content\images\25тортелинипримавера%28cropped%29.jpg" />
-    <Content Include="Content\images\25тортелинипримавера.jpg" />
-    <Content Include="Content\images\27сутлијаш%28cropped%29.jpg" />
-    <Content Include="Content\images\27сутлијаш.jpg" />
-    <Content Include="Content\images\28макалосувипиперкикомпири%28cropped%29.jpg" />
-    <Content Include="Content\images\28макалосувипиперкикомпири.jpg" />
-    <Content Include="Content\images\29ликеродореви%28cropped%29.jpg" />
-    <Content Include="Content\images\29ликеродореви.jpg" />
-    <Content Include="Content\images\30ликеркарамела%28cropped%29.jpg" />
-    <Content Include="Content\images\30ликеркарамела.jpg" />
-    <Content Include="Content\images\31ликеркапини%28cropped%29.jpg" />
-    <Content Include="Content\images\31ликеркапини.jpg" />
-    <Content Include="Content\images\32ликерпортокал%28cropped%29.jpg" />
-    <Content Include="Content\images\32ликерпортокал.jpg" />
-    <Content Include="Content\images\33чорбаморкови%28cropped%29.jpg" />
-    <Content Include="Content\images\33чорбаморкови.jpg" />
-    <Content Include="Content\images\34пролетначорба%28cropped%29.jpg" />
-    <Content Include="Content\images\34пролетначорба.jpg" />
-    <Content Include="Content\images\35чорбаодлеб%28cropped%29.jpg" />
-    <Content Include="Content\images\35чорбаодлеб.jpg" />
-    <Content Include="Content\images\36векнамеленомесо%28cropped%29.jpg" />
-    <Content Include="Content\images\36векнамеленомесо.jpg" />
-    <Content Include="Content\images\37младикомпирисомагдонос%28cropped%29.jpg" />
-    <Content Include="Content\images\37младикомпирисомагдонос.jpg" />
-    <Content Include="Content\images\38брзкачамак%28cropped%29.jpg" />
-    <Content Include="Content\images\38брзкачамак.jpg" />
-    <Content Include="Content\images\39прженитиквички%28cropped%29.jpg" />
-    <Content Include="Content\images\39прженитиквички.jpg" />
-    <Content Include="Content\images\40овошнасалата%28cropped%29.jpg" />
-    <Content Include="Content\images\40овошнасалата.jpg" />
-    <Content Include="Content\images\41сладокомлет%28cropped%29.jpg" />
-    <Content Include="Content\images\41сладокомлет.jpg" />
-    <Content Include="Content\images\424-300x200%28cropped%29.jpg" />
-    <Content Include="Content\images\424-300x200.jpg" />
-    <Content Include="Content\images\42Tequilla-Sunrise%28cropped%29.jpg" />
-    <Content Include="Content\images\42Tequilla-Sunrise.jpg" />
-    <Content Include="Content\images\44CubaLibre%28cropped%29.jpg" />
-    <Content Include="Content\images\44CubaLibre.jpg" />
-    <Content Include="Content\images\45Mai-Tai%28cropped%29.jpg" />
-    <Content Include="Content\images\45Mai-Tai.jpg" />
-    <Content Include="Content\images\46SexontheBeach%28cropped%29.jpg" />
-    <Content Include="Content\images\46SexontheBeach.jpg" />
-    <Content Include="Content\images\47Margarita%28cropped%29.jpg" />
-    <Content Include="Content\images\47Margarita.jpg" />
-    <Content Include="Content\images\48Mojito%28cropped%29.jpg" />
-    <Content Include="Content\images\48Mojito.jpg" />
-    <Content Include="Content\images\49Paloma%28cropped%29.jpg" />
-    <Content Include="Content\images\49Paloma.jpg" />
-    <Content Include="Content\images\50ElDiablo%28cropped%29.jpg" />
-    <Content Include="Content\images\50ElDiablo.jpg" />
-    <Content Include="Content\images\51пилешкомед%28cropped%29.jpg" />
-    <Content Include="Content\images\51пилешкомед.jpg" />
-    <Content Include="Content\images\53макаронисирењепечурки%28cropped%29.jpg" />
-    <Content Include="Content\images\53макаронисирењепечурки.jpg" />
-    <Content Include="Content\images\54салатаграв%28cropped%29.jpg" />
-    <Content Include="Content\images\54салатаграв.jpg" />
-    <Content Include="Content\images\55полнетимодрипатлиџани%28cropped%29.jpg" />
-    <Content Include="Content\images\55полнетимодрипатлиџани.jpg" />
-    <Content Include="Content\images\56беласалата%28cropped%29.jpg" />
-    <Content Include="Content\images\56беласалата.jpg" />
-    <Content Include="Content\images\57мусакатиквички%28cropped%29.jpg" />
-    <Content Include="Content\images\57мусакатиквички.jpg" />
-    <Content Include="Content\images\58салатацвеклојаболка%28cropped%29.jpg" />
-    <Content Include="Content\images\58салатацвеклојаболка.jpg" />
-    <Content Include="Content\images\59салатакруша%28cropped%29.jpg" />
-    <Content Include="Content\images\59салатасокрушиисланина.jpg" />
-    <Content Include="Content\images\60салатапеченипиперки%28cropped%29.jpg" />
-    <Content Include="Content\images\60салатапеченипиперки.jpg" />
-    <Content Include="Content\images\61Топлисендвичи%28cropped%29.jpg" />
-    <Content Include="Content\images\61Топлисендвичи.jpg" />
-    <Content Include="Content\images\62Бананабомбици%28cropped%29.jpg" />
-    <Content Include="Content\images\62Бананабомбици.jpg" />
-    <Content Include="Content\images\63Јајцасотартарсос%28cropped%29.jpg" />
-    <Content Include="Content\images\63Јајцасотартарсос.jpg" />
-    <Content Include="Content\images\64Салатацрвеназелка%28cropped%29.jpg" />
-    <Content Include="Content\images\64Салатацрвеназелка.jpg" />
-    <Content Include="Content\images\65Полнетипечурки%28cropped%29.jpg" />
-    <Content Include="Content\images\65Полнетипечурки.jpg" />
-    <Content Include="Content\images\66Полнетидоматинарускиначин%28cropped%29.jpg" />
-    <Content Include="Content\images\66Полнетидоматинарускиначин.jpg" />
-    <Content Include="Content\images\67полнетидоматисошкампи%28cropped%29.jpg" />
-    <Content Include="Content\images\67полнетидоматисошкампи.jpg" />
-    <Content Include="Content\images\69Празнагрчкиначин%28cropped%29.jpg" />
-    <Content Include="Content\images\69Празнагрчкиначин.jpg" />
-    <Content Include="Content\images\71Валдорфсалата%28cropped%29.jpg" />
-    <Content Include="Content\images\71Валдорфсалата.jpg" />
-    <Content Include="Content\images\74Рускасалата%28cropped%29.jpg" />
-    <Content Include="Content\images\74Рускасалата.jpg" />
-    <Content Include="Content\images\75Францускасалата%28cropped%29.jpg" />
-    <Content Include="Content\images\75Францускасалата.jpg" />
-    <Content Include="Content\images\76Јапонскасалата%28cropped%29.JPG" />
-    <Content Include="Content\images\76Јапонскасалата.JPG" />
-    <Content Include="Content\images\77Салатаодкомпирисомајонез%28cropped%29.jpg" />
-    <Content Include="Content\images\77Салатаодкомпирисомајонез.jpg" />
-    <Content Include="Content\images\78салатасокомпириикраставици%28cropped%29.jpg" />
-    <Content Include="Content\images\78салатасокомпириикраставици.jpg" />
-    <Content Include="Content\images\79салатаодвиршли%28cropped%29.jpg" />
-    <Content Include="Content\images\79салатаодвиршли.jpg" />
-    <Content Include="Content\images\80Пилешкасалатаводиња%28cropped%29.jpg" />
-    <Content Include="Content\images\80Пилешкасалатаводиња.jpg" />
-    <Content Include="Content\images\81францускиордевер%28cropped%29.jpg" />
-    <Content Include="Content\images\81францускиордевер.jpg" />
-    <Content Include="Content\images\82ладнотелешкофрикандо%28cropped%29.JPG" />
-    <Content Include="Content\images\82ладнотелешкофрикандо.JPG" />
-    <Content Include="Content\images\83Пилешкобеломесовомајонез%28cropped%29.jpg" />
-    <Content Include="Content\images\83Пилешкобеломесовомајонез.jpg" />
-    <Content Include="Content\images\87Паштетаодпилешкомесо%28cropped%29.jpg" />
-    <Content Include="Content\images\87Паштетаодпилешкомесо.jpg" />
-    <Content Include="Content\images\89салатаодтуна%28cropped%29.jpg" />
-    <Content Include="Content\images\89салатаодтуна.jpg" />
-    <Content Include="Content\images\90ЈајцаБенедикт%28cropped%29.jpg" />
-    <Content Include="Content\images\90ЈајцаБенедикт.jpg" />
-    <Content Include="Content\images\91Натуромлет%28cropped%29.jpg" />
-    <Content Include="Content\images\91Натуромлет.jpg" />
-    <Content Include="Content\images\92Омлетнашпанскиначин%28cropped%29.jpg" />
-    <Content Include="Content\images\92Омлетнашпанскиначин.jpg" />
-    <Content Include="Content\images\93Кајганасосирење%28cropped%29.jpg" />
-    <Content Include="Content\images\93Кајганасосирење.jpg" />
-    <Content Include="Content\images\94Кајганасошкампи%28cropped%29.jpg" />
-    <Content Include="Content\images\94Кајганасошкампи.jpg" />
-    <Content Include="Content\images\95Тврдоваренијајцасобешамел%28cropped%29.jpg" />
-    <Content Include="Content\images\95Тврдоваренијајцасобешамел.jpg" />
-    <Content Include="Content\images\96Палачинкисопилешкомесо%28cropped%29.jpg" />
-    <Content Include="Content\images\96Палачинкисопилешкомесо.jpg" />
-    <Content Include="Content\images\97крофниодсирење%28cropped%29.jpg" />
-    <Content Include="Content\images\97крофниодсирење.jpg" />
-    <Content Include="Content\images\98Шпагетимиланезе%28cropped%29.jpg" />
-    <Content Include="Content\images\98Шпагетимиланезе.jpg" />
-    <Content Include="Content\images\99Шпагетинаполитански%28cropped%29.jpg" />
-    <Content Include="Content\images\99Шпагетинаполитански.jpg" />
-    <Content Include="Content\images\azEen8B_700b.jpg" />
-    <Content Include="Content\images\beshamel%28cropped%29.jpg" />
-    <Content Include="Content\images\beshamel.jpg" />
-    <Content Include="Content\images\brusketi.gif" />
-    <Content Include="Content\images\cokoladoSoOriz.jpg" />
-    <Content Include="Content\images\cropped_0_25тортелинипримавера.jpg" />
-    <Content Include="Content\images\cropped_0_39прженитиквички.jpg" />
-    <Content Include="Content\images\cropped_0_89салатаодтуна.jpg" />
-    <Content Include="Content\images\cropped_0_Food_Prep_Counter_hi.jpg" />
-    <Content Include="Content\images\cropped_0_Лепчињасотунаимоцарела.jpg" />
-    <Content Include="Content\images\cropped_0_Паниранкарфиол.jpg" />
-    <Content Include="Content\images\cropped_0_Пастасалатасопотпеченипиперки.jpg" />
-    <Content Include="Content\images\cropped_0_Пилешкосокостеновсос.jpg" />
-    <Content Include="Content\images\cropped_0_ПројаУжице.jpg" />
-    <Content Include="Content\images\cropped_0_Студентскипрженилепчиња.jpg" />
-    <Content Include="Content\images\cropped_0_Францускачорбасокромид.jpg" />
-    <Content Include="Content\images\cropped_0_Чваркиодсоја.jpg" />
-    <Content Include="Content\images\cropped_0_Чорбаоддоматиибосилек.jpg" />
-    <Content Include="Content\images\cropped_0_Чорбаодтиквавотиква.jpg" />
-    <Content Include="Content\images\cropped_1_tzatziki.jpg" />
-    <Content Include="Content\images\full_0_25тортелинипримавера.jpg" />
-    <Content Include="Content\images\full_0_39прженитиквички.jpg" />
-    <Content Include="Content\images\full_0_89салатаодтуна.jpg" />
-    <Content Include="Content\images\full_0_Лепчињасотунаимоцарела.jpg" />
-    <Content Include="Content\images\full_0_Паниранкарфиол.jpg" />
-    <Content Include="Content\images\full_0_Пастасалатасопотпеченипиперки.jpg" />
-    <Content Include="Content\images\full_0_Пилешкосокостеновсос.jpg" />
-    <Content Include="Content\images\full_0_ПројаУжице.jpg" />
-    <Content Include="Content\images\full_0_Студентскипрженилепчиња.jpg" />
-    <Content Include="Content\images\full_0_Францускачорбасокромид.jpg" />
-    <Content Include="Content\images\full_0_Чваркиодсоја.jpg" />
-    <Content Include="Content\images\full_0_Чорбаоддоматиибосилек.jpg" />
-    <Content Include="Content\images\full_0_Чорбаодтиквавотиква.jpg" />
-    <Content Include="Content\images\full_1_tzatziki.jpg" />
-    <Content Include="Content\images\goodIcon.jpg" />
-    <Content Include="Content\images\images2%28cropped%29.jpg" />
-    <Content Include="Content\images\images2.jpg" />
-    <Content Include="Content\images\jajcasosenf%28cropped%29.jpg" />
-    <Content Include="Content\images\jajcasosenf.jpg" />
-    <Content Include="Content\images\kiflivirsla%28cropped%29.jpg" />
-    <Content Include="Content\images\kiflivirsla.jpg" />
-    <Content Include="Content\images\kohkaskaval%28cropped%29.jpg" />
-    <Content Include="Content\images\kohkaskaval.jpg" />
-    <Content Include="Content\images\konjak.jpg" />
-    <Content Include="Content\images\lutiPileskiKrilcamvc%28cropped%29.jpg" />
-    <Content Include="Content\images\lutiPileskiKrilcamvc.jpg" />
-    <Content Include="Content\images\PicMonkey Collage.jpg" />
-    <Content Include="Content\images\pizza-gif.gif" />
-    <Content Include="Content\images\pogaca%28cropped%29.jpg" />
-    <Content Include="Content\images\pogaca.jpg" />
-    <Content Include="Content\images\pohuvanoBienoSirenje%28cropped%29.jpg" />
-    <Content Include="Content\images\pohuvanoBienoSirenje.jpg" />
-    <Content Include="Content\images\riseAndshrooms1.jpg" />
-    <Content Include="Content\images\rolat%28cropped%290.jpg" />
-    <Content Include="Content\images\rolat.jpg" />
-    <Content Include="Content\images\rolat0.jpg" />
-    <Content Include="Content\images\rolatspanak%28cropped%29.jpg" />
-    <Content Include="Content\images\rolatspanak.jpg" />
-    <Content Include="Content\images\rolattuna%28cropped%29.jpg" />
-    <Content Include="Content\images\rolattuna%28cropped%290.jpg" />
-    <Content Include="Content\images\rolattuna.jpg" />
-    <Content Include="Content\images\rolattuna0.jpg" />
-    <Content Include="Content\images\sausage%28cropped%29.jpg" />
-    <Content Include="Content\images\sausage.jpg" />
-    <Content Include="Content\images\soleniPernicinja%28cropped%29.jpg" />
-    <Content Include="Content\images\soleniPernicinja.jpg" />
-    <Content Include="Content\images\sutlijas.jpg" />
-    <Content Include="Content\images\svinskoFile%28cropped%29.jpg" />
-    <Content Include="Content\images\svinskoFile.jpg" />
-    <Content Include="Content\images\tumblr_naghnwe39n1qmz9t5o1_500.gif" />
-    <Content Include="Content\images\Unity5_DivineShrine_Shadowood_Shadow.jpg" />
-    <Content Include="Content\images\Брускети.gif" />
-    <Content Include="Content\images\Колачодафион%28cropped%29.jpeg" />
-    <Content Include="Content\images\Колачодафион.jpeg" />
-    <Content Include="Content\images\Макаронинастудентскиначин%28cropped%29.JPG" />
-    <Content Include="Content\images\Макаронинастудентскиначин.JPG" />
-    <Content Include="Content\images\Паниранобиеносирење%28cropped%29.jpg" />
-    <Content Include="Content\images\Паниранобиеносирење.jpg" />
-    <Content Include="Content\images\Печензеленчук%28cropped%29.jpeg" />
-    <Content Include="Content\images\Печензеленчук.jpeg" />
-    <Content Include="Content\images\пилешкасупасофиде%28cropped%29.png" />
-    <Content Include="Content\images\пилешкасупасофиде.png" />
-    <Content Include="Content\images\пилешкосолимон%28cropped%29.jpg" />
-    <Content Include="Content\images\пилешкосолимон.jpg" />
-    <Content Include="Content\images\Пилешкосопавлакаипечурки%28cropped%29.jpg" />
-    <Content Include="Content\images\Пилешкосопавлакаипечурки.jpg" />
-    <Content Include="Content\images\Прженијаболкавотесто%28cropped%29.jpg" />
-    <Content Include="Content\images\Прженијаболкавотесто.jpg" />
-    <Content Include="Content\images\салатајајцамарула%28cropped%29.jpg" />
-    <Content Include="Content\images\салатајајцамарула.jpg" />
-    <Content Include="Content\images\Салатаодцвекло%28cropped%29.jpg" />
-    <Content Include="Content\images\Салатаодцвекло.jpg" />
-    <Content Include="Content\images\Салатасотиквички%28cropped%29.jpg" />
-    <Content Include="Content\images\Салатасотиквички.jpg" />
-    <Content Include="Content\images\Салатацелер%28cropped%29.jpg" />
-    <Content Include="Content\images\Салатацелер.jpg" />
-    <Content Include="Content\images\топчињапилешкоикашкавал%28cropped%29.jpg" />
-    <Content Include="Content\images\топчињапилешкоикашкавал.jpg" />
-    <Content Include="Content\images\Чоколадосоориз%28cropped%29.jpg" />
-    <Content Include="Content\images\Чоколадосоориз.jpg" />
-    <Content Include="Content\images\Чорбасоцелер%28cropped%29.jpeg" />
-    <Content Include="Content\images\Чорбасоцелер.jpeg" />
     <Content Include="Content\jquery.mCustomScrollbar.min.css" />
     <Content Include="Content\loaders\loaders markup.html" />
     <Content Include="Content\loaders\loaders.css.min.css" />
@@ -528,6 +261,9 @@
     <Content Include="images\ico\logo.png" />
     <Content Include="images\img.jpg" />
     <Content Include="images\intro.jpg" />
+    <Content Include="images\Status\678069-sign-error-128.png" />
+    <Content Include="images\Status\678134-sign-check-128.png" />
+    <Content Include="images\Status\tick_green.png" />
     <Content Include="images\uparr-48-w.png" />
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular.js" />
@@ -673,9 +409,11 @@
     <Content Include="Views\Shared\_SideCategoriesBlocks.cshtml" />
     <Content Include="Views\Shared\_TipsAndTricks.cshtml" />
     <Content Include="Views\Shared\_SideCategoriesList.cshtml" />
+    <Content Include="Views\User\_UserBlogPosts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\images\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
