--- a/SiGotvime (Web)/Web.config
+++ b/SiGotvime (Web)/Web.config
@@ -11,6 +11,7 @@
   </configSections>
   <connectionStrings>
     <add name="SiGotvimeDB" connectionString="Data Source=cs84bvagcq.database.windows.net,1433;Initial Catalog=SiGotvimeDB;User ID=martin;Password=Solev450045" providerName="System.Data.SqlClient" />
+    <add name="SiGotvimeDB_Dev" connectionString="Data Source=cs84bvagcq.database.windows.net,1433;Initial Catalog=SiGotvimeDB_Dev;User ID=martin;Password=Solev450045" providerName="System.Data.SqlClient" />
     <add name="FoodConnection" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FoodDatabase; Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
