- Fixed register error; Approve Recipes;

--- a/SiGotvime (Web)/SiGotvime (Web).csproj
+++ b/SiGotvime (Web)/SiGotvime (Web).csproj
@@ -194,6 +194,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HelperController.cs" />
@@ -410,6 +411,7 @@
     <Content Include="Views\Shared\_TipsAndTricks.cshtml" />
     <Content Include="Views\Shared\_SideCategoriesList.cshtml" />
     <Content Include="Views\User\_UserBlogPosts.cshtml" />
+    <Content Include="Views\Admin\UnApprovedRecipes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
