--- a/SiGotvime (Web)/SiGotvime (Web).csproj
+++ b/SiGotvime (Web)/SiGotvime (Web).csproj
@@ -412,6 +412,7 @@
     <Content Include="Views\Shared\_SideCategoriesList.cshtml" />
     <Content Include="Views\User\_UserBlogPosts.cshtml" />
     <Content Include="Views\Admin\UnApprovedRecipes.cshtml" />
+    <Content Include="Views\Shared\_IngredientsPopover.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
