- Error page - Fixed favourite user recipes wrong recipe ID

--- a/SiGotvime (Web)/Web.config
+++ b/SiGotvime (Web)/Web.config
@@ -37,7 +37,7 @@
       <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
     </httpHandlers>
 
-    <customErrors mode="Off" />
+    <!--<customErrors mode="Off"/>-->
     
   </system.web>
   <runtime>
