--- a/SiGotvime (Web)/Web.config
+++ b/SiGotvime (Web)/Web.config
@@ -27,7 +27,8 @@
     
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Authentication" timeout="2880" name="{sigotvimeCookie}" />
-    </authentication>    
+    </authentication>
+    <sessionState timeout="300"></sessionState>
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
     <httpModules>
