--- a/SiGotvime (Web)/SiGotvime (Web).csproj
+++ b/SiGotvime (Web)/SiGotvime (Web).csproj
@@ -423,6 +423,7 @@
     <Content Include="Views\History\FeaturedUsers.cshtml" />
     <Content Include="Views\History\RecipesOfTheDay.cshtml" />
     <Content Include="Views\Shared\_Tweets.cshtml" />
+    <Content Include="Views\Recipe\_RecipeList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
